# Tello-Edu-Obstacle-Detection

./: .env  .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  setup.py
LICENSES/: NetworkX.LICENSE
docs/: architecture.md  usage.md
scripts/: run_edge_detection.sh
src/tello_obstacle_detection/: __init__.py  config.py  drone_controller.py  edge_detector.py  main.py  video_input_pipeline.py  vision_utils.py
src/tello_obstacle_detection/depth_pipeline/: input_pipeline.py  midas_trigger.py  output_pipeline.py  post_processor.py
src/tello_obstacle_detection/drone_navigator/: direction_navigator.py  drone_navigator.py
src/tello_obstacle_detection/gird_map/: grid_map_builder.py
src/tello_obstacle_detection/midas_pipeline/: __init__.py
src/tello_obstacle_detection/path_calculator/: node_pruner.py  path_calculator.py
tests/: __init__.py  test_drone_controller.py  test_edge_detector.py
tests/depth_pipeline/: test_midas_trigger.py
tests/drone_navigator/: test_drone_navigator.py
tests/grid_map/: grid_map_builder_test.py
tests/path_calculator/: test_path_calculator.py
