[tool.poetry]
name = "tello-obstacle-detection"
version = "0.1.0"
description = ""
authors = ["BlancJH <junha.baek.tech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
av = "15.0.0"
blinker = "1.9.0"
certifi = "2025.7.14"
charset-normalizer = "3.4.2"
click = "8.2.1"
djitellopy = "2.5.0"
filelock = "3.18.0"
flask = "3.1.1"
fsspec = "2025.7.0"
hf-xet = "1.1.5"
huggingface-hub = "0.34.1"
idna = "3.10"
iniconfig = "2.1.0"
imutils = "0.5.4"
itsdangerous = "2.2.0"
jinja2 = "3.1.6"
markupsafe = "3.0.2"
mpmath = "1.3.0"
networkx = "3.5"
packaging = "25.0"
pillow = "11.3.0"
pluggy = "1.6.0"
pygments = "2.19.2"
pytest = "8.4.1"
pyyaml = "6.0.2"
requests = "2.32.4"
safetensors = "0.5.3"
sympy = "1.14.0"
torch = "2.2.2"
torchvision = "0.17.2"
tqdm = "4.67.1"
typing-extensions = "4.14.1"
urllib3 = "2.5.0"
werkzeug = "3.1.3"
numpy = "1.25.2"
opencv-python = "4.5.5.62"
timm = "0.6.13"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
